# SIN-Code-ADW-Tool

./: AGENTS.md  CLAUDE.md  README.md  SKILL.md  pyproject.toml
src/adw/: __init__.py  cli.doc.md  cli.py  reporter.doc.md  reporter.py  scanner.doc.md  scanner.py
tests/: test_agents_md.py  test_scanner.py
tests/fixtures/: complex.py  duplicate.py
