[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adw"
version = "0.1.0"
description = "Architectural Debt Watchdogs — code quality scanner"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "SIN-Code", email = "code@sin.dev" }
]
keywords = ["static-analysis", "code-quality", "complexity", "dead-code"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "typer>=0.12",
]

[project.scripts]
adw = "adw.cli:main"

[project.urls]
Homepage = "https://github.com/OpenSIN-Code/SIN-Code-ADW-Tool"
Repository = "https://github.com/OpenSIN-Code/SIN-Code-ADW-Tool"

[tool.hatch.build.targets.wheel]
packages = ["src/adw"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
